# micropb

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/arm-app/: Cargo.toml  README.md  REAME.md  build.rs
examples/arm-app/.cargo/: config.toml
examples/arm-app/proto/: accel.proto  gps.proto  packet.proto  raw.proto
examples/arm-app/src/: main.rs
examples/basic/: Cargo.toml  build.rs  example.proto
examples/basic/src/: main.rs
examples/file-descriptor-set/: Cargo.toml  README.md  build.rs
examples/file-descriptor-set/src/: lib.rs
examples/no-panic/: Cargo.toml  gps.proto
examples/no-panic/src/: main.rs
examples/no-panicking/: Cargo.toml  README.md  build.rs
examples/no-panicking/src/: main.rs
micropb/: Cargo.toml  README.md
micropb-gen/: Cargo.toml  README.md
micropb-gen/src/: config.rs  descriptor.rs  error.rs  generator.rs  lib.rs  pathtree.rs  service.rs  utils.rs
micropb-gen/src/generator/: enum.rs  field.rs  graph.rs  location.rs  message.rs  oneof.rs  type_spec.rs
micropb-gen/tests/: error.rs  test.proto
micropb/src/: callback.rs  container.rs  decode.rs  encode.rs  extension.rs  field.rs  lib.rs  message.rs  misc.rs  size.rs
micropb/tests/: extension.rs
picopb/: Cargo.toml
picopb/src/: container.rs  decode.rs  encode.rs  lib.rs  message.rs  misc.rs  size.rs
tests/: README.md  example.proto
tests/basic-proto/: Cargo.toml  build.rs
tests/basic-proto/proto/: basic-dup.proto  basic.proto  basic.toml  basic3.proto  collections.proto  conflicting_names.proto  default_str_escape.proto  extension.proto  implicit_presence.proto  keyword_fields.proto  large_field_nums.proto  map.proto  map.toml  my.collections.toml  nested.proto  recursive.proto  single_oneof.proto
tests/basic-proto/src/: boxed_and_option.rs  conflicting_names.rs  container_alloc.rs  container_arrayvec.rs  container_cow.rs  container_heapless.rs  custom_field.rs  default_str_escape.rs  extension.rs  extern_import.rs  files_with_same_package.rs  fixed_string_and_bytes.rs  implicit_presence.rs  int_type.rs  keyword_fields.rs  large_field_nums.rs  lib.rs  lifetime_fields.rs  minimal_accessors.rs  no_config.rs  no_suffix.rs  recursive.rs  single_oneof.rs  skip.rs  static_lifetime_fields.rs  unsigned_enum.rs  with_config_file.rs
tests/decode-only/: Cargo.toml  build.rs
tests/decode-only/src/: lib.rs
tests/doc-proto/: Cargo.toml  build.rs  test.proto  test.proto.rs
tests/doc-proto/src/: lib.rs
tests/editions/: Cargo.toml  build.rs
tests/editions/proto/: scoping.proto
tests/editions/src/: lib.rs  scoping.rs
tests/encode-only/: Cargo.toml  build.rs  deeply_nested.proto
tests/encode-only/src/: deeply_nested.rs  lib.rs
tests/proptest-proto/: Cargo.toml  all_types.proto  build.rs
tests/proptest-proto/src/: lib.rs
tests/serde-proto/: Cargo.toml  build.rs
tests/serde-proto/proto/: data.proto
tests/serde-proto/src/: lib.rs
