[workspace]
resolver = "2"

members = [
    "micropb",
    "micropb-gen",
    "tests/basic-proto", 
    "tests/serde-proto",
    "tests/encode-only",
    "tests/decode-only",
    "examples/no-panicking",
    "examples/file-descriptor-set",
    "examples/arm-app",
]

# For the no-panicking example
[profile.release-lto]
inherits = "release"
opt-level = "s"
lto = "fat"
codegen-units = 1
