[package]
name = "micropb-gen"
version = "0.1.0"
edition = "2021"

[features]
default = ["format"]
format = ["dep:prettyplease"]

[dependencies]
tempfile = "3.10"
quote = "1"
proc-macro2 = "1"
syn = { version = "2", default-features = false, features = ["parsing", "derive", "printing"] }
convert_case = "0.6"
prettyplease = { version = "0.2.17", optional = true }
micropb = { version = "0.1.0", path = "../micropb", features = ["std"] }

[dev-dependencies]
syn = { version = "2", default-features = false, features = ["extra-traits"] }
