[package]
name = "micropb-gen"
version = "0.2.0"
edition = "2021"
authors = ["Yuhan Lin <yuhanliin@protonmail.com>"]
description = "Generate Rust module from Protobuf files"
keywords = ["protobuf", "no_std", "embedded", "serialization"]
categories = ["embedded", "no-std::no-alloc", "encoding"]
readme = "README.md"
repository = "https://github.com/YuhanLiin/micropb"
rust-version = "1.83.0"
license = "MIT OR Apache-2.0"

[features]
default = ["format"]
format = ["dep:prettyplease"]

[dependencies]
tempfile = "3.10"
quote = "1"
proc-macro2 = "1"
syn = { version = "2", default-features = false, features = ["parsing", "derive", "printing"] }
convert_case = "0.6"
prettyplease = { version = "0.2.17", optional = true }
micropb = { version = "0.2.0", path = "../micropb", features = ["std"] }

[dev-dependencies]
syn = { version = "2", default-features = false, features = ["extra-traits"] }
# Used for doc examples
micropb = { version = "0.2.0", path = "../micropb", features = ["std", "container-heapless"] }
