[package]
name = "micropb-gen"
version = "0.4.1"
edition = "2024"
authors = ["Yuhan Lin <yuhanliin@protonmail.com>"]
description = "Generate Rust module from Protobuf files"
keywords = ["protobuf", "no_std", "embedded", "serialization"]
categories = ["embedded", "no-std::no-alloc", "encoding"]
repository = "https://github.com/YuhanLiin/micropb"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"

[dependencies]
tempfile = "3.10"
quote = "1"
proc-macro2 = "1"
syn = { version = "2", default-features = false, features = ["parsing", "derive", "printing"] }
convert_case = "0.6"
prettyplease = { version = "0.2.17", optional = true }
micropb = { version = "0.4.1", path = "../micropb", features = ["std"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
toml = { version = "0.9.7", optional = true, default-features = false, features = ["std", "serde", "parse"] }

[dev-dependencies]
syn = { version = "2", default-features = false, features = ["extra-traits"] }
# Used for doc examples
micropb = { version = "0.4.1", path = "../micropb", features = ["std", "container-heapless"] }

[features]
default = ["format", "config-file"]
config-file = ["serde", "dep:toml"]
format = ["dep:prettyplease"]
