[package]
name = "micropb"
version = "0.1.0"
edition = "2021"

[features]
default = ["encode", "decode", "enable-64bit"]
encode = []
decode = []
enable-64bit = []
alloc = []
std = ["alloc"]
container-arrayvec = ["dep:arrayvec"]
container-heapless = ["dep:heapless"]
serde = ["bitvec/serde", "arrayvec?/serde", "heapless?/serde"]

[dependencies]
arrayvec = { version = "0.7", optional = true, default-features = false }
heapless = { version = "0.8", optional = true }
num-traits = { version = "0.2", default-features = false }
never = { version = "0.1", default-features = false }
bitvec = { version = "1", default-features = false, features = ["atomic"] }

[dev-dependencies]
micropb = { path = ".", features = ["std" ,"container-arrayvec", "container-heapless"] }
paste = "1"
