[package]
name = "micropb"
version = "0.3.0"
edition = "2021"
authors = ["Yuhan Lin <yuhanliin@protonmail.com>"]
description = "Rust Protobuf library targetting embedded systems and no_std environments"
keywords = ["protobuf", "no_std", "embedded", "serialization"]
categories = ["embedded", "no-std::no-alloc", "encoding"]
repository = "https://github.com/YuhanLiin/micropb"
rust-version = "1.83.0"
license = "MIT OR Apache-2.0"

[features]
default = ["encode", "decode", "enable-64bit"]
encode = []
decode = []
enable-64bit = []
alloc = []
std = ["alloc"]
container-arrayvec = ["dep:arrayvec"]
container-heapless = ["dep:heapless"]

[dependencies]
arrayvec = { version = "0.7", optional = true, default-features = false }
heapless = { version = "0.8", optional = true }
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
micropb = { path = ".", features = ["std" ,"container-arrayvec", "container-heapless"] }
paste = "1"
proptest = "1.6"

[package.metadata.docs.rs]
features = ["std"]
