[package]
name = "picopb"
version = "0.1.0"
edition = "2021"

[features]
container-arrayvec = ["dep:arrayvec"]

[dependencies]
arrayvec = { version = "0.7", optional = true }
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
picopb = { path = ".", features = ["container-arrayvec"] }
