[package]
name = "proptest-proto"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micropb = { path = "../../micropb/", features = ["alloc"]}
quick-protobuf = "0.8.0"

[build-dependencies]
micropb-gen = { path = "../../micropb-gen/" }
pb-rs = "0.10.0"

[dev-dependencies]
proptest = "1.6.0"
proptest-derive = "0.5.1"
