[package]
name = "proptest-proto"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micropb = { path = "../../micropb/", features = ["alloc"]}
protobuf = "3.7.2"

[build-dependencies]
micropb-gen = { path = "../../micropb-gen/" }
protobuf-codegen = "3.7.2"

[dev-dependencies]
proptest = "1.6.0"
proptest-derive = "0.5.1"
