[package]
name = "proptest-proto"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micropb = { path = "../../micropb/", features = ["alloc"]}
prost = "0.14"

[build-dependencies]
micropb-gen = { path = "../../micropb-gen/" }
prost-build = "0.14"

[dev-dependencies]
proptest = "1.6.0"
proptest-derive = "0.5.1"
