[package]
name = "serde-proto"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micropb = { path = "../../micropb/", features = ["container-heapless", "container-arrayvec", "alloc", "serde"]}
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = "0.5"

[build-dependencies]
micropb-gen = { path = "../../micropb-gen/" }
