[package]
name = "serde-proto"
version = "0.0.0"
edition = "2021"

[dependencies]
micropb = { path = "../../micropb/", features = ["container-heapless-0-9", "container-arrayvec-0-7", "alloc"]}
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = "0.5"
arrayvec = { version = "0.7", default-features = false, features = ["serde"] }
heapless = { version = "0.9", features = ["serde"] }

[build-dependencies]
micropb-gen = { path = "../../micropb-gen/" }
